[gd_scene load_steps=7 format=3 uid="uid://byhe11rpbvhvb"]

[ext_resource type="Script" path="res://Characters/Enemies/vampire.gd" id="1_b7a5w"]
[ext_resource type="Texture2D" uid="uid://dtl42l0jspd3x" path="res://icon.svg" id="2_4dt1i"]

[sub_resource type="Animation" id="Animation_mw17j"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-32, 0), Vector2(28, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_nqfei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_00boy"]
_data = {
"Attack": SubResource("Animation_mw17j"),
"RESET": SubResource("Animation_nqfei")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqjdk"]
size = Vector2(64, 64)

[node name="Vampire" type="Node2D"]
script = ExtResource("1_b7a5w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_00boy")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.0431373, 0.823529, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4dt1i")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qqjdk")

[node name="hp" type="Label" parent="."]
offset_left = -123.0
offset_top = -49.0
offset_right = -83.0
offset_bottom = -26.0

[node name="damageLabel" type="Label" parent="."]
offset_left = 196.0
offset_top = -9.0
offset_right = 236.0
offset_bottom = 14.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
